--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
                                     <div class="whenwhere-img">
-                                        <img src="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/8ff237aa9bb70aab65f549587607ca1c.jpeg" alt="LỄ CƯỚI">
+                                        <img src="./templates/AnhCuoi/DSC02276.jpg" alt="LỄ CƯỚI">
                                     </div>
                                     <div class="content text-center">
                                         <h5>LỄ CƯỚI</h5>
@@ -698,9 +698,6 @@
             <!-- <script src="https://duocbich.iwedding.info/common/biicommon.min.js?v=20241222"></script> -->
             <script src="https://preview.iwedding.info/common/biicommon.min.js?v=20241222"></script>
     
-
-
-
             
         </div>
 
