--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
                                     <div class="whenwhere-img">
-                                        <img src="./templates/AnhCuoi/DSC02368.jpg" alt="LỄ CƯỚI">
+                                        <img src="./templates/AnhCuoi/DSC02090.jpg" alt="LỄ CƯỚI">
                                     </div>
                                     <div class="content text-center">
                                         <h5>LỄ CƯỚI</h5>
@@ -693,7 +693,8 @@
                     });
                     return parsed;
                 }
-                let biicore = parseJsonRecursively('{"template_id":"60d9d51ad8eec60dc9382e37","templatePremium":false,"themeRoot":"https:\/\/duocbich.iwedding.info\/templates\/template1","webroot":"https:\/\/duocbich.iwedding.info","coreSite":"https:\/\/biihappy.com","webToken":"67c067d7e73fa8fd110f5a20","isPremium":true,"bgMusic":"https://mediademo.ascvn.com.vn/Media/1_NTT_EOFFICE/FolderFunc/202503/Audios/ttt-20250304114143-e.mp3","alert":"[]","effect":"{\\\"type\\\":\\\"heart\\\"}","logo":"https:\/\/iwedding.info\/common\/imgs\/bii.png?v=20210131","url_landing_page":"https:\/\/biihappy.com\/iwedding","isAutoPlay":false,"footer_title":"iWedding | N\u1ec1n t\u1ea3ng t\u1ea1o website \u0111\u00e1m c\u01b0\u1edbi mi\u1ec5n ph\u00ed t\u1eeb Biihappy","footer_title_mobile":"T\u1ea1o website \u0111\u00e1m c\u01b0\u1edbi mi\u1ec5n ph\u00ed"}');
+                // let biicore = parseJsonRecursively('{"template_id":"60d9d51ad8eec60dc9382e37","templatePremium":false,"themeRoot":"https:\/\/duocbich.iwedding.info\/templates\/template1","webroot":"https:\/\/duocbich.iwedding.info","coreSite":"https:\/\/biihappy.com","webToken":"67c067d7e73fa8fd110f5a20","isPremium":true,"bgMusic":"https://mediademo.ascvn.com.vn/Media/1_NTT_EOFFICE/FolderFunc/202503/Audios/ttt-20250304114143-e.mp3","alert":"[]","effect":"{\\\"type\\\":\\\"heart\\\"}","logo":"https:\/\/iwedding.info\/common\/imgs\/bii.png?v=20210131","url_landing_page":"https:\/\/biihappy.com\/iwedding","isAutoPlay":false,"footer_title":"iWedding | N\u1ec1n t\u1ea3ng t\u1ea1o website \u0111\u00e1m c\u01b0\u1edbi mi\u1ec5n ph\u00ed t\u1eeb Biihappy","footer_title_mobile":"T\u1ea1o website \u0111\u00e1m c\u01b0\u1edbi mi\u1ec5n ph\u00ed"}');
+                let biicore = parseJsonRecursively('{"template_id":"60d9d51ad8eec60dc9382e37","templatePremium":false,"themeRoot":"https:\/\/duocbich.iwedding.info\/templates\/template1","webroot":"https:\/\/duocbich.iwedding.info","coreSite":"https:\/\/biihappy.com","webToken":"67c067d7e73fa8fd110f5a20","isPremium":true,"bgMusic":"..\/common\/imgs\/EmDongYDucPhuc.mp3","alert":"[]","effect":"{\\\"type\\\":\\\"heart\\\"}","logo":"https:\/\/iwedding.info\/common\/imgs\/bii.png?v=20210131","url_landing_page":"https:\/\/biihappy.com\/iwedding","isAutoPlay":false,"footer_title":"iWedding | N\u1ec1n t\u1ea3ng t\u1ea1o website \u0111\u00e1m c\u01b0\u1edbi mi\u1ec5n ph\u00ed t\u1eeb Biihappy","footer_title_mobile":"T\u1ea1o website \u0111\u00e1m c\u01b0\u1edbi mi\u1ec5n ph\u00ed"}');
             </script>
             <!-- <script src="https://duocbich.iwedding.info/common/biicommon.min.js?v=20241222"></script> -->
             <script src="https://preview.iwedding.info/common/biicommon.min.js?v=20241222"></script>
