--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
                                     <div class="whenwhere-img">
-                                        <img src="./templates/AnhCuoi/DSC02090.jpg" alt="LỄ CƯỚI">
+                                        <img src="./templates/AnhCuoi/2.jpg" alt="LỄ CƯỚI">
                                     </div>
                                     <div class="content text-center">
                                         <h5>LỄ CƯỚI</h5>
