--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:title" content="Văn Được &amp; Ngọc Bích Wedding site!">
     <meta property="og:url" content="https://duocbich.iwedding.info">
     <meta property="og:description" content="Văn Được &amp; Ngọc Bích - Our wedding date: 2025-03-29 | Một cuộc hôn nhân hoàn hảo chỉ là hai người không hoàn hảo không chịu từ bỏ nhau">
-    <meta property="og:image" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/d1569110caff062a60b7c702b09772f7.jpeg">
-    <meta property="og:image:url" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/d1569110caff062a60b7c702b09772f7.jpeg">
+    <meta property="og:image" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/templates/60d9d51ad8eec60dc9382e37/790c3c001eeb95461acd3f0e4f4e2618.jpg">
+    <meta property="og:image:url" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/templates/60d9d51ad8eec60dc9382e37/790c3c001eeb95461acd3f0e4f4e2618.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
@@ -521,7 +521,7 @@
                             });
                         </script> -->
                         
-                       -->
+                    
                     </div>
 
                 </div>
