--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:title" content="Văn Được &amp; Ngọc Bích Wedding site!">
     <meta property="og:url" content="https://duocbich.iwedding.info">
     <meta property="og:description" content="Văn Được &amp; Ngọc Bích - Our wedding date: 2025-03-29 | Một cuộc hôn nhân hoàn hảo chỉ là hai người không hoàn hảo không chịu từ bỏ nhau">
-    <meta property="og:image" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/templates/60d9d51ad8eec60dc9382e37/790c3c001eeb95461acd3f0e4f4e2618.jpg">
-    <meta property="og:image:url" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/templates/60d9d51ad8eec60dc9382e37/790c3c001eeb95461acd3f0e4f4e2618.jpg">
+    <meta property="og:image" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/9a438458aeef3cfb4aa0ed4c24178eac.jpeg">
+    <meta property="og:image:url" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/9a438458aeef3cfb4aa0ed4c24178eac.jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
@@ -144,7 +144,7 @@
                                         <p><i class="ti-heart"></i></p>
                                         <!--<p class="birthday-main">25/08/1995</p>-->
 
-                                        <p>Là chàng IT đến từ Ninh Thuận, một người hiền lành và ít nói. Luôn coi trọng
+                                        <p>Là chàng trai đến từ Ninh Thuận, một người hiền lành và ít nói. Luôn coi trọng
                                             tình cảm và yêu thương gia đình. Với anh: “Gia đình là điểm tựa vững chắc
                                             nhất và là bến đỗ bình yên không đâu sánh bằng đối với mỗi con người. Đó
                                             luôn là nơi tràn ngập tình yêu thương để ta trở về.”</p>
@@ -165,7 +165,7 @@
                                     <div class="full-width">
                                         <h6>Lâm Ngọc Bích</h6>
                                         <p><i class="ti-heart"></i></p>
-                                        <p>Cô gái Kế toán đến từ Ninh thuận, là người hay cười luôn vui vẻ nhưng sống nội tâm , thích đi du lịch, đọc sách, khám phá 
+                                        <p>Cô gái đến từ Ninh thuận, là người hay cười luôn vui vẻ nhưng sống nội tâm , thích đi du lịch, đọc sách, khám phá 
                                         </p>
                                         <div class="social">
                                             <div class="full-width">
