--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                     <div class="full-width">
                                         <h6>Lâm Ngọc Bích</h6>
                                         <p><i class="ti-heart"></i></p>
-                                        <p>Cô gái đến từ Ninh thuận, là người hay cười luôn vui vẻ nhưng sống nội tâm , thích đi du lịch, đọc sách, khám phá 
+                                        <p>Cô gái đến từ Ninh thuận, là người hiền lành, dễ mến, hay cười luôn vui vẻ nhưng sống nội tâm , thích trồng cây, đi du lịch, đọc sách, khám phá 
                                         </p>
                                         <div class="social">
                                             <div class="full-width">
@@ -538,7 +538,7 @@
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
                                     <div class="whenwhere-img">
-                                        <img src="./templates/AnhCuoi/2.jpg" alt="LỄ CƯỚI">
+                                        <img src="./templates/AnhCuoi/DSC02214.jpg" alt="LỄ CƯỚI">
                                     </div>
                                     <div class="content text-center">
                                         <h5>LỄ CƯỚI</h5>
