--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
                         <div class="gallery-item col-md-4">
                             <div class="mb-2 btn-see-more-gallery gallery-box" data-index="0">
                                 <div class="gallery-img">
-                                    <img src="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/galleries/67c06ba475060c7f8e094679/small.jpg" />
+                                    <img src="./templates/AnhCuoi/1.jpg" />
+                                    <!-- <img src="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/galleries/67c06ba475060c7f8e094679/small.jpg" /> -->
                                 </div>
                                 <div class="gallery-detail">
                                     <h4 class="mb-0">Album hình cưới</h4>
@@ -538,7 +539,7 @@
                             <div class="owl-carousel owl-theme">
                                 <div class="item">
                                     <div class="whenwhere-img">
-                                        <img src="./templates/AnhCuoi/DSC02214.jpg" alt="LỄ CƯỚI">
+                                        <img src="./templates/AnhCuoi/2.jpg" alt="LỄ CƯỚI">
                                     </div>
                                     <div class="content text-center">
                                         <h5>LỄ CƯỚI</h5>
