--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Văn Được &amp; Ngọc Bích Wedding site!">
     <!-- <meta property="og:url" content="https://duocbich.iwedding.info"> -->
-    <meta property="og:description" content="Văn Được &amp; Ngọc Bích - Our wedding date: 2025-03-29 | Một cuộc hôn nhân hoàn hảo chỉ là hai người không hoàn hảo không chịu từ bỏ nhau">
+    <!-- <meta property="og:description" content="Văn Được &amp; Ngọc Bích - Our wedding date: 2025-03-29 | Một cuộc hôn nhân hoàn hảo chỉ là hai người không hoàn hảo không chịu từ bỏ nhau"> -->
     <!-- <meta property="og:image" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/9a438458aeef3cfb4aa0ed4c24178eac.jpeg">
     <meta property="og:image:url" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/9a438458aeef3cfb4aa0ed4c24178eac.jpeg"> -->
 
