--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:title" content="Văn Được &amp; Ngọc Bích Wedding site!">
     <meta property="og:url" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/9a438458aeef3cfb4aa0ed4c24178eac.jpeg">
     <meta property="og:description" content="Văn Được &amp; Ngọc Bích - Our wedding date: 2025-03-29 | Một cuộc hôn nhân hoàn hảo chỉ là hai người không hoàn hảo không chịu từ bỏ nhau">
-    <!-- <meta property="og:image" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/9a438458aeef3cfb4aa0ed4c24178eac.jpeg">
-    <meta property="og:image:url" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/9a438458aeef3cfb4aa0ed4c24178eac.jpeg"> -->
+    <meta property="og:image" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/9a438458aeef3cfb4aa0ed4c24178eac.jpeg">
+    <meta property="og:image:url" content="https://cdn.biihappy.com/ziiweb/website/67c067d7e73fa8fd110f5a20/9a438458aeef3cfb4aa0ed4c24178eac.jpeg">
 
     <meta name="format-detection" content="telephone=no">
     <meta name="application-name" content="iWedding">
@@ -179,8 +179,7 @@
                     <div class="row">
                         <div class="col-md-12 text-center animate-box" data-animate-effect="fadeInUp">
                             <h3 class="oliven-couple-title title-in-background-color">We are getting married!</h3>
-                            <h4 class="oliven-couple-subtitle">Sự gặp gỡ của hai nhân cách giống như sự tiếp xúc của hai
-                                chất hóa học: nếu có bất kỳ phản ứng nào, cả hai đều chuyển hóa.</h4>
+                            <h4 class="oliven-couple-subtitle">Ngày gặp mặt đầu tiên của hai đứa vào năm 2007, đến ngày 31/12/2022 cả hai chính thức bước vào tìm hiểu nhau, sau 2 năm 2 tháng 29 ngày chúng mình quyết định về chung một nhà.</h4>
                         </div>
                     </div>
 
