--- a/index.html
+++ b/index.html
@@ -138,14 +138,12 @@
                                         <p><i class="ti-heart"></i></p>
                                         <!--<p class="birthday-main">25/08/1995</p>-->
 
-                                        <p>Là chàng trai đến từ Ninh Thuận, một người hiền lành và ít nói. Luôn coi trọng
+                                        <p>Là một người hiền lành và ít nói. Luôn coi trọng
                                             tình cảm và yêu thương gia đình. Với anh: “Gia đình là điểm tựa vững chắc
                                             nhất và là bến đỗ bình yên không đâu sánh bằng đối với mỗi con người. Đó
                                             luôn là nơi tràn ngập tình yêu thương để ta trở về.”</p>
                                         <div class="social">
                                             <div class="full-width">
-
-
                                             </div>
                                         </div>
                                     </div>
@@ -163,7 +161,6 @@
                                         </p>
                                         <div class="social">
                                             <div class="full-width">
-
 
                                             </div>
                                         </div>
