--- a/index.html
+++ b/index.html
@@ -612,21 +612,21 @@
             </div> -->
 
             <div id="menu-access" class="">
-                <!-- <div class="btn-menu-open">
+                <div class="btn-menu-open">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-list" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
                             d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
                     </svg>
                 </div> -->
-                <!-- <div class="btn-menu-close">
+                <div class="btn-menu-close">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-x-lg" viewBox="0 0 16 16">
                         <path
                             d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z" />
                     </svg>
-                </div> -->
-                <!-- <ul class="p-0 m-0 list-menu-icon">
+                </div>
+                 <ul class="p-0 m-0 list-menu-icon">
                     <li class="text-center">
                         <a href="https://duocbich.iwedding.info/rsvp" target="_blank" class="text-white">
                             <span class="content-button tooltipBtn">
@@ -636,7 +636,7 @@
                             </span>
                         </a>
                     </li>
-                </ul> -->
+                </ul>
             </div>
 
             <!-- <script type="text/javascript">
